correction pi computation

--- a/first_part_project.ipynb
+++ b/first_part_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c20ee429",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.027449846267700195\n"
+      "0.014967679977416992\n"
      ]
     }
    ],
@@ -105,7 +105,7 @@
     "\n",
     "        for nucleotid_pos in range(len(self.nodes[1].seq)):\n",
     "            result = reccurent_prob_vect(self.nodes[id_root],nucleotid_pos,Q)\n",
-    "            result *= pi\n",
+    "            result = result @ np.transpose(pi)\n",
     "            log_results.append(np.log(result))\n",
     "\n",
     "        return np.sum(log_results)\n",
@@ -142,6 +142,37 @@
    "source": [
     "transition_matrix = np.full((4,4),1)-4*np.eye(4)\n",
     "stationary_distribution(transition_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3122f676",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-681.3835732906306\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tr.compute_likelihood(transition_matrix=transition_matrix))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7a9ebf7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# things to do :\n",
+    "# - \n",
+    "# - threading implementation\n",
+    "# - "
    ]
   }
  ],
