--- a/first_part_project.ipynb
+++ b/first_part_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "c20ee429",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.027449846267700195\n"
+      "[[9 1]\n",
+      " [9 2]\n",
+      " [8 9]\n",
+      " [8 3]\n",
+      " [7 4]\n",
+      " [7 5]\n",
+      " [6 7]\n",
+      " [6 8]]\n",
+      "0.003515481948852539\n",
+      "-5560.730590379855\n"
      ]
     }
    ],
@@ -44,6 +53,7 @@
     "        \n",
     "        # read files \n",
     "        links = np.loadtxt(links_path, delimiter=\",\",dtype=int)\n",
+    "        print(links)\n",
     "        branchlength = np.loadtxt(branchlength_path, delimiter=\",\")\n",
     "        msa = []   \n",
     "        with open(msa_path) as f:\n",
@@ -65,7 +75,6 @@
     "        # also save sequences in leaves\n",
     "        for id,sequence in enumerate(msa):\n",
     "            self.nodes[id+1].seq = sequence[1]\n",
-    "\n",
     "\n",
     "    def compute_likelihood(self,transition_matrix,mut_rate = 1e-8):\n",
     "\n",
@@ -109,17 +118,96 @@
     "            log_results.append(np.log(result))\n",
     "\n",
     "        return np.sum(log_results)\n",
+    "\n",
+    "    def compute_likelihood_threading(self, transition_matrix, mut_rate = 1e-8, n_threads = 10):\n",
+    "\n",
+    "        def encode(nucleotide):\n",
+    "            mapping = {\n",
+    "                \"A\": [1, 0, 0, 0],\n",
+    "                \"C\": [0, 1, 0, 0],\n",
+    "                \"G\": [0, 0, 1, 0],\n",
+    "                \"T\": [0, 0, 0, 1]\n",
+    "            }\n",
+    "            return np.array(mapping.get(nucleotide, [0, 0, 0, 0]))\n",
+    "\n",
+    "        def reccurent_prob_vect(node,nucleotid_pos,Q):  \n",
+    "            if node.isleaf :  # check if leaf\n",
+    "                return (encode(node.seq[nucleotid_pos]))      \n",
+    "\n",
+    "            else : # if not leaf\n",
+    "                t1,t2 = node.dist_to_child\n",
+    "\n",
+    "                proba_child_1 = reccurent_prob_vect(node.children[0],nucleotid_pos,Q)\n",
+    "                proba_child_2 = reccurent_prob_vect(node.children[1],nucleotid_pos,Q)\n",
+    "\n",
+    "                proba_child_1 = expm(Q*t1) @ proba_child_1\n",
+    "                proba_child_2 = expm(Q*t2) @ proba_child_2\n",
+    "\n",
+    "                return(proba_child_1 * proba_child_2)\n",
+    "        \n",
+    "        def one_thread(results, nucl_pos, id_root, Q, pi):\n",
+    "            for nucleotid_pos in nucl_pos:\n",
+    "                result = reccurent_prob_vect(self.nodes[id_root],nucleotid_pos,Q)\n",
+    "                result *= pi\n",
+    "                results[nucleotid_pos] = np.log(result)\n",
+    "\n",
+    "        Q = mut_rate*transition_matrix\n",
+    "        pi = stationary_distribution(Q)\n",
+    "\n",
+    "        for node_id in self.nodes :\n",
+    "            if self.nodes[node_id].parent == None :\n",
+    "                id_root = node_id\n",
+    "                break\n",
+    "\n",
+    "        seq_len = len(self.nodes[1].seq)\n",
+    "        pos_per_thread = np.array_split(range(seq_len), n_threads)\n",
+    "        results = [np.NAN] * seq_len\n",
+    "\n",
+    "        threads = []\n",
+    "        for t in range(n_threads):\n",
+    "            x = threading.Thread(target=one_thread, args=(results, pos_per_thread[t], id_root, Q, pi))\n",
+    "            threads.append(x)\n",
+    "            x.start()\n",
+    "        for t in threads:\n",
+    "            t.join()\n",
+    "\n",
+    "        return np.sum(results)\n",
     "       \n",
     "import os\n",
-    "os.chdir(\"C:\\\\Users\\\\Eric\\\\OneDrive\\\\Documents\\\\Travail\\\\Master\\\\semester1\\\\advanced_python_programming\\\\project_likelihood\\\\project_likelihood\")\n",
+    "os.chdir(\"/home/samuel/python/advance_programming_master/project_likelihood\")\n",
     "\n",
     "tr = tree(msa_path=\"msa.dat\",links_path=\"table.dat\",branchlength_path=\"branchlength.dat\")\n",
     "\n",
     "import time\n",
     "transition_matrix = np.full((4,4),1)-4*np.eye(4)\n",
     "t0 = time.time()\n",
-    "tr.compute_likelihood(transition_matrix=transition_matrix)\n",
-    "print(time.time()-t0)"
+    "res = tr.compute_likelihood(transition_matrix=transition_matrix)\n",
+    "print(time.time()-t0)\n",
+    "\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "44d727d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.008474588394165039\n",
+      "-5560.730590379855\n"
+     ]
+    }
+   ],
+   "source": [
+    "t0 = time.time()\n",
+    "res = tr.compute_likelihood_threading(transition_matrix=transition_matrix)\n",
+    "print(time.time()-t0)\n",
+    "\n",
+    "print(res)"
    ]
   },
   {
@@ -143,6 +231,28 @@
     "transition_matrix = np.full((4,4),1)-4*np.eye(4)\n",
     "stationary_distribution(transition_matrix)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4175d990",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = [np.array([0, 1, 2]), np.array([3, 4, 5])]\n",
+    "for i in t[0]:\n",
+    "    print(i)"
+   ]
   }
  ],
  "metadata": {
@@ -161,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
