--- a/first_part_project.ipynb
+++ b/first_part_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "c20ee429",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.014967679977416992\n"
+      "0.011635303497314453\n"
      ]
     }
    ],
@@ -78,15 +78,15 @@
     "            }\n",
     "            return np.array(mapping.get(nucleotide, [0, 0, 0, 0]))\n",
     "\n",
-    "        def reccurent_prob_vect(node,nucleotid_pos,Q):  \n",
+    "        def reccurent_prob_vect(node,from_nuc,to_nuc,Q):  \n",
     "            if node.isleaf :  # check if leaf\n",
-    "                return (encode(node.seq[nucleotid_pos]))      \n",
+    "                return (np.transpose(np.array([encode(i) for i in node.seq[from_nuc:(to_nuc+1)]])))      \n",
     "\n",
     "            else : # if not leaf\n",
     "                t1,t2 = node.dist_to_child\n",
     "\n",
-    "                proba_child_1 = reccurent_prob_vect(node.children[0],nucleotid_pos,Q)\n",
-    "                proba_child_2 = reccurent_prob_vect(node.children[1],nucleotid_pos,Q)\n",
+    "                proba_child_1 = reccurent_prob_vect(node.children[0],from_nuc,to_nuc,Q)\n",
+    "                proba_child_2 = reccurent_prob_vect(node.children[1],from_nuc,to_nuc,Q)\n",
     "\n",
     "                proba_child_1 = expm(Q*t1) @ proba_child_1\n",
     "                proba_child_2 = expm(Q*t2) @ proba_child_2\n",
@@ -103,10 +103,12 @@
     "\n",
     "        log_results = []  \n",
     "\n",
-    "        for nucleotid_pos in range(len(self.nodes[1].seq)):\n",
-    "            result = reccurent_prob_vect(self.nodes[id_root],nucleotid_pos,Q)\n",
-    "            result = result @ np.transpose(pi)\n",
-    "            log_results.append(np.log(result))\n",
+    "        from_nuc = 0\n",
+    "        to_nuc = len(self.nodes[1].seq)\n",
+    "\n",
+    "        result = reccurent_prob_vect(self.nodes[id_root],from_nuc,to_nuc,Q)\n",
+    "        result = pi @ result\n",
+    "        log_results.append(np.log(result))\n",
     "\n",
     "        return np.sum(log_results)\n",
     "       \n",
@@ -146,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "3122f676",
    "metadata": {},
    "outputs": [
